--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <td align=center width=150px>
         <center>
           <span style="font-size: 22px">
-            <a href="./paper.pdf" target="_blank">[Paper]</a>
+            <a href="https://drive.google.com/file/d/1Cjc3Ae_knnMzjAIzg1sHc4jIEs1-5x7_/view?usp=sharing" target="_blank">[Dataset]</a>
           </span>
         </center>
       </td>
-
+      
       <td align=center width=150px>
         <center>
           <span style="font-size: 22px">
