--- a/index.html
+++ b/index.html
@@ -3,18 +3,91 @@
 <html>
 
 <head>
-  <title>DOC2PPT</title>
-
+  <title>[AAAI'22] DOC2PPT</title> 
   <link rel="stylesheet" href="template.css">
 </head>
 
 <body>
   <br>
 
-  <center><span style="font-size: 44px; font-weight: bold;">DOC2PPT: Automatic Presentation Slide Deck Generation from Documents</span></center><br/>
+  <center><span style="font-size: 44px; font-weight: bold;">DOC2PPT: Automatic Presentation Slide Deck Generation from Documents</span></center>
+  
+  <br>
   
   <table align=center width=1000px>
     <tr>
+      <td align=center width=150px>
+        <center>
+          <span style="font-size: 22px">
+            <a href="https://tsujuifu.github.io/" target="_blank">Tsu-Jui Fu</a><sup>1</sup>
+          </span>
+        </center>
+      </td>
+
+      <td align=center width=150px>
+        <center>
+          <span style="font-size: 22px">
+            <a href="https://sites.cs.ucsb.edu/~william/" target="_blank">William Yang Wang</a><sup>1</sup>
+          </span>
+        </center>
+      </td>
+
+      <td align=center width=150px>
+        <center>
+          <span style="font-size: 22px">
+            <a href="http://alumni.media.mit.edu/~djmcduff/" target="_blank">Daniel McDuff</a><sup>2</sup>
+          </span>
+        </center>
+      </td>
+
+      <td align=center width=150px>
+        <center>
+          <span style="font-size: 22px">
+            <a href="http://people.csail.mit.edu/yalesong/home/" target="_blank">Yale Song</a><sup>2</sup>
+          </span>
+        </center>
+      </td>
+    </tr>
+  </table>
+
+  <table align=center width=600px style="padding-top: 0px; padding-bottom: 20px;">
+    <tr>
+      <td align=center width=150px>
+        <center>
+          <span style="font-size: 22px"><sup>1</sup>UC Santabarbara</span>
+        </center>
+      </td>
+
+      <td align=center width=150px>
+        <center>
+          <span style="font-size: 22px"><sup>2</sup>Microsoft Research</span>
+        </center>
+      </td>
+    </tr>
+  </table>
+
+  <table align=center width=1000px>
+    <tr>
+      <td align=center width=650px>
+        <center>
+          <span style="font-size: 22px">AAAI Conference on Artificial Intelligence (<b>AAAI</b>) 2022</span>
+        </center>
+      </td>
+    </tr>
+  </table>
+
+  <br>
+
+  <table align=center width=1000px>
+    <tr>
+      <td align=center width=150px>
+        <center>
+          <span style="font-size: 22px">
+            <a href="https://tsujuifu.github.io/pubs/aaai22_doc2ppt.pdf" target="_blank">[Paper]</a>
+          </span>
+        </center>
+      </td>
+
       <td align=center width=150px>
         <center>
           <span style="font-size: 22px">
