--- a/qual.html
+++ b/qual.html
@@ -104,8 +104,7 @@
     <br />
     <center>
     <select style="font-size: 20px; width: 120px;" id="sel-idd" onchange="chgSelIdd()"></select>&nbsp;&nbsp;
-    <a target="_blank" style="font-size: 20px;" id="link-paper">[Paper]</a>&nbsp;/&nbsp;
-    <a target="_blank" style="font-size: 20px;" id="link-slide">[Slide]</a>
+    <a target="_blank" style="font-size: 20px;" id="link-paper">[Paper]</a>&nbsp;/&nbsp;<a target="_blank" style="font-size: 20px;" id="link-slide">[Slide]</a>
     </center>
     <br /> <br />
     <center>
