--- a/index.html
+++ b/index.html
@@ -63,9 +63,7 @@
         <sup>1</sup>UC Santabarbara&nbsp;&nbsp;
         <sup>2</sup>Microsoft Research&nbsp;&nbsp;
     </center>
-    <center style="font-size: 22px;">
-        AAAI Conference on Artificial Intelligence (<b>AAAI</b>) 2022
-    </center>
+    <center style="font-size: 22px;">AAAI Conference on Artificial Intelligence (<b>AAAI</b>) 2022</center>
     <br />
     <center >
         <a href="https://tsujuifu.github.io/pubs/aaai22_doc2ppt.pdf" target="_blank">[Paper]</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -73,9 +71,7 @@
         <a href="./qual.html" target="_blank">[Qualitative Examples]</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </center>
     <br />
-    <center>
-        <img src="./imgs/qual-comb.png" style="width: 800px;" />
-    </center>
+    <center><img src="./imgs/qual-comb.png" style="width: 800px;" /></center>
     <br />
     <center>
         <h2>Abstract</h2>
