--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </center>
     <center style="font-size: 22px;">AAAI Conference on Artificial Intelligence (<b>AAAI</b>) 2022</center>
     <br />
-    <center >
+    <center style="font-size: 22px;">
         <a href="https://tsujuifu.github.io/pubs/aaai22_doc2ppt.pdf" target="_blank">[Paper]</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="https://drive.google.com/file/d/1Cjc3Ae_knnMzjAIzg1sHc4jIEs1-5x7_/view?usp=sharing" target="_blank">[Dataset]</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="./qual.html" target="_blank">[Qualitative Examples]</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
