--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a href="http://people.csail.mit.edu/yalesong/home/" target="_blank">Yale Song</a><sup>2</sup>&nbsp;&nbsp;
     </center>
     <center style="font-size: 22px;">
-        <sup>1</sup>UC Santabarbara&nbsp;&nbsp;
+        <sup>1</sup>UC Santa Barbara&nbsp;&nbsp;
         <sup>2</sup>Microsoft Research&nbsp;&nbsp;
     </center>
     <center style="font-size: 22px;">AAAI Conference on Artificial Intelligence (<b>AAAI</b>) 2022</center>
