--- a/index.html
+++ b/index.html
@@ -57,18 +57,18 @@
         <a href="https://tsujuifu.github.io/" target="_blank">Tsu-Jui Fu</a><sup>1</sup>&nbsp;&nbsp;
         <a href="https://sites.cs.ucsb.edu/~william/" target="_blank">William Yang Wang</a><sup>1</sup>&nbsp;&nbsp;
         <a href="http://alumni.media.mit.edu/~djmcduff/" target="_blank">Daniel McDuff</a><sup>2</sup>&nbsp;&nbsp;
-        <a href="http://people.csail.mit.edu/yalesong/home/" target="_blank">Yale Song</a><sup>2</sup>&nbsp;&nbsp;
+        <a href="http://people.csail.mit.edu/yalesong/home/" target="_blank">Yale Song</a><sup>2</sup>
     </center>
     <center style="font-size: 22px;">
         <sup>1</sup>UC Santa Barbara&nbsp;&nbsp;
-        <sup>2</sup>Microsoft Research&nbsp;&nbsp;
+        <sup>2</sup>Microsoft Research
     </center>
     <center style="font-size: 22px;">AAAI Conference on Artificial Intelligence (<b>AAAI</b>) 2022</center>
     <br />
     <center style="font-size: 22px;">
         <a href="https://tsujuifu.github.io/pubs/aaai22_doc2ppt.pdf" target="_blank">[Paper]</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://drive.google.com/file/d/1Cjc3Ae_knnMzjAIzg1sHc4jIEs1-5x7_/view?usp=sharing" target="_blank">[Dataset]</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="./qual.html" target="_blank">[Qualitative Examples]</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://drive.google.com/drive/folders/1s2zJ04WZYifZhotRCXpk4OGtCHWXuM0b" target="_blank">[Dataset]</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="./qual.html" target="_blank">[Qualitative Examples]</a>
     </center>
     <br />
     <center><img src="./imgs/qual-comb.png" style="width: 800px;" /></center>
