--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
     <br />
     <center><h1 style="width: 680px;">DOC2PPT: Automatic Presentation Slide Deck Generation from Documents</h1></center>
     <center style="font-size: 22px;">
-        <a href="https://tsujuifu.github.io/" target="_blank">Tsu-Jui Fu</a><sup>1</sup>&nbsp;&nbsp;
-        <a href="https://sites.cs.ucsb.edu/~william/" target="_blank">William Yang Wang</a><sup>1</sup>&nbsp;&nbsp;
-        <a href="http://alumni.media.mit.edu/~djmcduff/" target="_blank">Daniel McDuff</a><sup>2</sup>&nbsp;&nbsp;
-        <a href="http://people.csail.mit.edu/yalesong/home/" target="_blank">Yale Song</a><sup>2</sup>
+        <a href="https://scholar.google.com/citations?user=7QRDcC0AAAAJ" target="_blank">Tsu-Jui Fu</a><sup>1</sup>&nbsp;&nbsp;
+        <a href="https://scholar.google.com/citations?user=gf8Ms_8AAAAJ" target="_blank">William Yang Wang</a><sup>1</sup>&nbsp;&nbsp;
+        <a href="https://scholar.google.com/citations?user=m7Jr-b4AAAAJ" target="_blank">Daniel McDuff</a><sup>2</sup>&nbsp;&nbsp;
+        <a href="https://scholar.google.com/citations?user=dNHNpxoAAAAJ" target="_blank">Yale Song</a><sup>2</sup>
     </center>
     <center style="font-size: 22px;">
         <sup>1</sup>UC Santa Barbara&nbsp;&nbsp;
